--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,7 +52,18 @@ services:
       - galera-network
     volumes:
       - ./proxysql.cnf:/etc/proxysql.cnf:ro
-    restart: unless-stopped
+    deploy:
+      mode: replicated
+      replicas: 1
+      placement:
+        constraints: [node.role == manager]
+      labels:
+        - traefik.enable=true
+        - traefik.http.routers.portainer.tls=true
+        - traefik.http.routers.portainer.rule=Host(`proxysql.roshamagin.site`)
+        - traefik.http.routers.portainer.entrypoints=websecure
+        - traefik.http.routers.portainer.tls.certresolver=myresolver
+        - traefik.http.services.portainer.loadbalancer.server.port=6080
 
 
 volumes:
