--- a/proxysql.cnf
+++ b/proxysql.cnf
@@ -5,7 +5,7 @@ admin_variables=
     admin_credentials="admin:admin"
     mysql_ifaces="0.0.0.0:6032"
     refresh_interval=2000
-    web_enabled=false
+    web_enabled=true
     web_port=6080
     stats_credentials="stats:admin"
 }
