--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,6 +80,7 @@ services:
         - traefik.http.routers.proxysql.tls.certresolver=myresolver
         - traefik.http.routers.proxysql.tls.passthrough=true
         - traefik.http.services.proxysql.loadbalancer.server.port=6080
+        - traefik.http.services.proxysql.loadbalancer.server.scheme=https
 
 
 volumes:
