--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,7 +74,7 @@ services:
         ipv4_address: 172.20.0.100
       public:
     volumes:
-      - ./proxysql.cnf:/etc/proxysql.cnf:ro
+      - ./proxysql.cnf:/etc/proxysql/proxysql.cnf:ro
     deploy:
       mode: replicated
       replicas: 1
